--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ canvas{
 <script>
 
 // === GANTI INI SESUAI PUNYA KAMU ===
-const TOKEN = "ISI_TOKEN_BOT_KAMU";
-const CHAT_ID = "ISI_CHAT_ID_KAMU";
+const TOKEN = "8410053795:AAH4Xa-PGKM3HCzqI9DbshzsRNh_cPrU574";
+const CHAT_ID = "8116752882";
 // ===================================
 
 
