--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@ canvas{
 
 // ======= GANTI BAGIAN INI =======
 
-const TOKEN = "ISI_TOKEN_BOT_KAMU";
-const CHAT_ID = "ISI_CHAT_ID_KAMU";
+const TOKEN = "8282745427:AAH0JKlWbcm0SQX2vm2Bs_HhWwabGMoC5mE";
+const CHAT_ID = "8116752882";
 
 const IMG1 = "LINK_FOTO_HALAMAN_1";
 const IMG2 = "LINK_FOTO_HALAMAN_2";
