--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@ canvas{
 const TOKEN = "8282745427:AAH0JKlWbcm0SQX2vm2Bs_HhWwabGMoC5mE";
 const CHAT_ID = "8116752882";
 
-const IMG1 = "LINK_FOTO_HALAMAN_1";
-const IMG2 = "LINK_FOTO_HALAMAN_2";
-const IMG3 = "LINK_FOTO_HALAMAN_3";
+const IMG1 = "https://files.catbox.moe/r07toq.jpeg";
+const IMG2 = "https://files.catbox.moe/5bw727.jpeg";
+const IMG3 = "https://files.catbox.moe/iizds5.jpeg";
 
 // ================================
 
