--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Happy Birthday Holy</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -41,31 +43,35 @@ body{
 
 .card{
     position:relative;
-    background:rgba(0,0,0,0.6);
+    background:rgba(0,0,0,0.7);
     backdrop-filter:blur(10px);
-    border-radius:20px;
-    padding:30px;
-    width:90%;
-    max-width:520px;
-    box-shadow:0 0 25px rgba(0,150,255,0.3);
+    border-radius:25px;
+    padding:35px;
+    width:95%;
+    max-width:900px;
+    box-shadow:0 0 35px rgba(0,150,255,0.4);
     z-index:2;
 }
 
 h1{
     color:#38bdf8;
     text-shadow:0 0 10px #38bdf8;
+    font-size: clamp(22px, 6vw, 36px);
 }
 
 button{
-    margin-top:15px;
-    padding:12px 22px;
+    margin-top:20px;
+    padding:16px 30px;
     border:none;
-    border-radius:12px;
+    border-radius:14px;
     background:#0ea5e9;
     color:white;
     font-weight:bold;
+    font-size:18px;
     cursor:pointer;
     transition:0.3s;
+    width:100%;
+    max-width:350px;
 }
 
 button:hover{
@@ -74,31 +80,34 @@ button:hover{
 }
 
 input{
-    width:95%;
-    padding:12px;
-    margin:6px 0;
-    border-radius:10px;
+    width:100%;
+    padding:16px;
+    margin:10px 0;
+    border-radius:12px;
     border:none;
     outline:none;
     background:#0f172a;
     color:white;
+    font-size:16px;
 }
 
 .typing{
-    min-height:150px;
-    font-size:16px;
-    line-height:1.6;
+    min-height:180px;
+    font-size: clamp(16px, 4.5vw, 20px);
+    line-height:1.7;
+    margin:15px 0;
 }
 
 #toast{
     position:fixed;
-    bottom:20px;
-    right:20px;
+    bottom:25px;
+    right:25px;
     background:#111;
     color:white;
-    padding:12px 16px;
-    border-radius:10px;
+    padding:15px 20px;
+    border-radius:12px;
     display:none;
+    font-size:16px;
 }
 
 canvas{
@@ -106,6 +115,12 @@ canvas{
     top:0;
     left:0;
     pointer-events:none;
+}
+
+@media (max-width: 600px) {
+    .card{
+        padding:25px;
+    }
 }
 
 </style>
@@ -168,7 +183,7 @@ canvas{
 
 <script>
 
-// ======= GANTI BAGIAN INI =======
+// ==== DATA DIAMBIL DARI KODEMU ====
 
 const TOKEN = "8282745427:AAH0JKlWbcm0SQX2vm2Bs_HhWwabGMoC5mE";
 const CHAT_ID = "8116752882";
@@ -267,7 +282,7 @@ text:text
     type("msg", msgText);
 })
 .catch(e=>{
-    toast("❌ Gagal kirim, cek TOKEN / CHAT ID!");
+    toast("❌ Gagal kirim ke Telegram!");
 });
 
 }
@@ -290,16 +305,16 @@ function add(){
     p.push({
         x:Math.random()*c.width,
         y:c.height,
-        s:Math.random()*3+1,
+        s:Math.random()*4+2,
         dy:Math.random()*-3-1,
-        col:"rgba(56,189,248,0.7)"
+        col:"rgba(56,189,248,0.8)"
     });
 }
 
 function draw(){
     x.clearRect(0,0,c.width,c.height);
 
-    if(Math.random()<0.2)add();
+    if(Math.random()<0.3)add();
 
     for(let i=0;i<p.length;i++){
         let o=p[i];
