--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <title>Happy Birthday Holy</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -16,6 +14,7 @@ body{
     background:#0f172a;
     color:white;
     text-align:center;
+    overflow-x:hidden;
 }
 
 .page{
@@ -46,42 +45,40 @@ body{
     background:rgba(0,0,0,0.7);
     backdrop-filter:blur(10px);
     border-radius:25px;
-    padding:35px;
-    width:95%;
+    padding:40px;
+    width:90%;
     max-width:900px;
-    box-shadow:0 0 35px rgba(0,150,255,0.4);
+    box-shadow:0 0 40px rgba(0,150,255,0.4);
     z-index:2;
 }
 
 h1{
     color:#38bdf8;
-    text-shadow:0 0 10px #38bdf8;
-    font-size: clamp(22px, 6vw, 36px);
+    text-shadow:0 0 15px #38bdf8;
+    font-size:40px;
 }
 
 button{
     margin-top:20px;
-    padding:16px 30px;
+    padding:14px 30px;
     border:none;
-    border-radius:14px;
+    border-radius:15px;
     background:#0ea5e9;
     color:white;
     font-weight:bold;
     font-size:18px;
     cursor:pointer;
     transition:0.3s;
-    width:100%;
-    max-width:350px;
 }
 
 button:hover{
-    transform:scale(1.05);
+    transform:scale(1.08);
     background:#0284c7;
 }
 
 input{
     width:100%;
-    padding:16px;
+    padding:14px;
     margin:10px 0;
     border-radius:12px;
     border:none;
@@ -92,16 +89,16 @@ input{
 }
 
 .typing{
-    min-height:180px;
-    font-size: clamp(16px, 4.5vw, 20px);
-    line-height:1.7;
-    margin:15px 0;
+    min-height:200px;
+    font-size:20px;
+    line-height:1.8;
+    padding:10px;
 }
 
 #toast{
     position:fixed;
-    bottom:25px;
-    right:25px;
+    bottom:20px;
+    right:20px;
     background:#111;
     color:white;
     padding:15px 20px;
@@ -117,10 +114,11 @@ canvas{
     pointer-events:none;
 }
 
-@media (max-width: 600px) {
-    .card{
-        padding:25px;
-    }
+.final{
+    margin-top:30px;
+    font-size:22px;
+    color:#38bdf8;
+    text-shadow:0 0 10px #38bdf8;
 }
 
 </style>
@@ -175,7 +173,9 @@ canvas{
 
     <div class="typing" id="msg"></div>
 
-    <button onclick="to1()">Kembali ke Awal</button>
+    <div class="final">
+        Nikmatilah masa tua mu Holy 😄
+    </div>
 </div>
 </div>
 
@@ -183,16 +183,17 @@ canvas{
 
 <script>
 
-// ==== DATA DIAMBIL DARI KODEMU ====
+// ======= GANTI BAGIAN INI DENGAN DATA KAMU =======
 
-const TOKEN = "8282745427:AAH0JKlWbcm0SQX2vm2Bs_HhWwabGMoC5mE";
+const TOKEN = "8449651864:AAFqcqFR4tj3CEQ_uTRjJ7beQBVgfl6T1a8";
 const CHAT_ID = "8116752882";
 
+// LINK FOTO YANG SUDAH KAMU KIRIM
 const IMG1 = "https://files.catbox.moe/r07toq.jpeg";
 const IMG2 = "https://files.catbox.moe/5bw727.jpeg";
 const IMG3 = "https://files.catbox.moe/iizds5.jpeg";
 
-// ================================
+// ================================================
 
 
 let doaText = `Semoga di hari spesialmu ini...
@@ -232,7 +233,7 @@ function type(id, text){
         if(i<text.length){
             el.innerHTML+=text.charAt(i);
             i++;
-            setTimeout(run,30);
+            setTimeout(run,40);
         }
     }
     run();
@@ -246,18 +247,24 @@ function toast(t){
 }
 
 function to2(){
-    p("p1","p2");
+    document.getElementById("p1").classList.remove("active");
+    document.getElementById("p2").classList.add("active");
     document.getElementById("music").play();
 }
 
-function to1(){ p("p3","p1"); }
-
-function p(a,b){
-    document.getElementById(a).classList.remove("active");
-    document.getElementById(b).classList.add("active");
-}
-
 function send(){
+
+// VALIDASI WAJIB ISI SEMUA
+if(
+    a1.value.trim()==="" ||
+    a2.value.trim()==="" ||
+    a3.value.trim()==="" ||
+    a4.value.trim()==="" ||
+    a5.value.trim()===""
+){
+    toast("⚠ Harap isi semua pertanyaan dulu ya Holy!");
+    return;
+}
 
 let text = `🎉 JAWABAN DARI HOLY 🎉
 
@@ -278,11 +285,14 @@ text:text
 .then(r=>r.json())
 .then(d=>{
     toast("✅ Jawaban berhasil terkirim ke Telegram!");
-    p("p2","p3");
+
+    document.getElementById("p2").classList.remove("active");
+    document.getElementById("p3").classList.add("active");
+
     type("msg", msgText);
 })
 .catch(e=>{
-    toast("❌ Gagal kirim ke Telegram!");
+    toast("❌ Gagal kirim, cek TOKEN / CHAT ID!");
 });
 
 }
@@ -305,8 +315,8 @@ function add(){
     p.push({
         x:Math.random()*c.width,
         y:c.height,
-        s:Math.random()*4+2,
-        dy:Math.random()*-3-1,
+        s:Math.random()*4+1,
+        dy:Math.random()*-4-1,
         col:"rgba(56,189,248,0.8)"
     });
 }
@@ -339,4 +349,4 @@ draw();
 </script>
 
 </body>
-</html>
+    </html>
