--- a/index.html
+++ b/index.html
@@ -183,17 +183,16 @@ canvas{
 
 <script>
 
-// ======= GANTI BAGIAN INI DENGAN DATA KAMU =======
+// ===== DATA SUDAH LANGSUNG TERISI =====
 
-const TOKEN = "8449651864:AAFqcqFR4tj3CEQ_uTRjJ7beQBVgfl6T1a8";
+const TOKEN = "8282745427:AAH0JKlWbcm0SQX2vm2Bs_HhWwabGMoC5mE";
 const CHAT_ID = "8116752882";
 
-// LINK FOTO YANG SUDAH KAMU KIRIM
 const IMG1 = "https://files.catbox.moe/r07toq.jpeg";
 const IMG2 = "https://files.catbox.moe/5bw727.jpeg";
 const IMG3 = "https://files.catbox.moe/iizds5.jpeg";
 
-// ================================================
+// ======================================
 
 
 let doaText = `Semoga di hari spesialmu ini...
@@ -254,7 +253,6 @@ function to2(){
 
 function send(){
 
-// VALIDASI WAJIB ISI SEMUA
 if(
     a1.value.trim()==="" ||
     a2.value.trim()==="" ||
@@ -299,7 +297,7 @@ text:text
 
 
 
-// ===== EFEK PARTICLE BIRU =====
+// ===== EFEK PARTICLE =====
 
 function fx(){
 
@@ -349,4 +347,4 @@ draw();
 </script>
 
 </body>
-    </html>
+</html>
